adding animation from our landing page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.line{
+    @apply overflow-hidden
+}
+
+.word{
+    @apply translate-y-full
+}
